src/objects/reCaptcha__mdt.object
<CustomObject>
    <fields>
        <fullName>Base_Url__c</fullName>
        <defaultValue>&quot;https://www.google.com/recaptcha/api/siteverify&quot;</defaultValue>
        <label>Base Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Secret_Key__c</fullName>
        <defaultValue>&quot;6LeXWxkUAAAAAKCxSf3-COq5p4R10HLwp-qkH8yd&quot;</defaultValue>
        <label>Secret Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Site_Key__c</fullName>
        <defaultValue>&quot;6LeXWxkUAAAAAIJb6JhpzUXDQW6agCRoc9xP64MI&quot;</defaultValue>
        <label>Site Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>reCaptcha</label>
    <pluralLabel>reCaptchas</pluralLabel>
</CustomObject>